# incata2

./: .gitignore  .test.sh  config.py  devenv.nix  devenv.yaml  example data.json  json explainer.md  main.py  pyproject.toml  readme.md  shell.nix  test.py  test1.py  test2.py  test3.py  test4.py  test5.py  ublox.py
gps/: __init__.py  devices.py  nmea.py
modules/: INA219.py  nmea.py  obd2.py  validate.py
obd2/: __init__.py  devices.py
ublox/: cli.py  ublox7.py
ups/: INA219.py
