[tool.poetry]
name = "incata2"
version = "0.1.0"
description = ""
authors = ["Roy Betjes <roy.betjes@talpanetwork.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyserial = "^3.5"
obd = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
